﻿sqlcon release notes

9/20/2016 v1.7.5.0
	New Features:
	1. command>edit to launch query edit window, to edit, execute sql script

9/12/2016 v1.7.4.0
	New Features:
	1. color schema of GUI table editor is configurable on sqlcon.cfg

8/24/2016 v1.7.3.0
	New Features:
	1. command>export /l2s to generate Linq to SQL C# class

8/19/2016 v1.7.2.1
	New Features:
	1. command>export /create supports wildcard to match table names

7/26/2016 v1.7.2.0
	New Features:
	1. command>export /json supports last data table to Json string

7/11/2016 v1.7.1.1
	Bugs Fixes:
	1. user configuration file %LOCALAPPDATA/datconn/sqlcon/user.cfg is overwritten by system default user.cfg 

7/6/2016 v1.7.1.0
	New Features:
	1. support Microsoft SQL Server Express LocalDB

7/5/2016 v1.7.0.0
	New Features:
	1. support Microsoft SQL Azure connection string

6/15/2016 v1.6.0.0
	Bugs Fixes:
	1. crashes when no database server defined on the user.cfg
	2. crashes when command>type /edit<CR> read-only tables
	Improvements/Enhancements:
	1. command>type /c# /class:name<CR> outputs named C# data array

5/4/2016 v1.5.1.0
	New Features:
	1. command xcopy supports column mappings

4/27/2016 v1.5.0.0
	New Features:
	1. add GUI tabe editor, command "type /edit" to open editor
	2. add GUI tabe viewer, command "open viewer" to view last data table

2/29/2016 v1.4.0.0
	New Features:
	1. xcopy large size data table using BulkCopy and display progress bar

2/7/2016 v1.3.3.0
	New Features:
	1. Add CopyTo, Clone, CompareTo extension methods to Data contract class

1/31/2016 v1.3.2.2
	Bugs Fixes:
	1. Data contract property of System.Data.DataTable cannot be DBNull

1/25/2016 v1.3.2.0
	New Features:
	1. generate C# data contract class from System.Data.DataTable.
	2. generate method to convert DataTable into IEnumerable<T>
	3. e.g. generate Northwind.Region: export /dc /class:Region

	public partial class Region
	{
		public int RegionID {get; set; }
		public string RegionDescription {get; set; }
