@@ -121,6 +121,11 @@
 //### key-value table, column [key] is primary key
 	//dictionarytables = [ { table: "Config", key: "Key",  value: "Value"} ];
 
+
+//### load remote configuration file
+	//cfg("http://www.datconn.com/demos/user.txt");
+	//cfg("ftp://username:pwd@ftp.datconn.com:21/demo/user.txt");
+
 /*****************************************************************************************************************
  *    end of configuration file
  ****************************************************************************************************************/
